# pos-ml-eng-tech-challenge

./: .coverage  .gitignore  MLproject  Proposta de Organização V2.md  Proposta de Organização V3.md  main.py  makefile  mlflow.db  pyproject.toml  readme.md  setup.ps1
.claude/agents/: AgentePythonBestPratices.agent.md
.github/workflows/: ci_pipeline.yml
docs/: ML canvas v1.docx  checklist_tech_challenge.md  guia_api_fastapi.md  model_card.md  plano_monitoramento.md  relatorio_avaliacao_telco_churn.md  relatorio_de_implementacao.md  tutorial_mlflow.md  ~$ canvas v1.docx
front/: app_vis.py
ml-churn-api/: README.md  pytest.ini  requirements.txt
ml-churn-api/Models/: README.md
ml-churn-api/app/: main.py
ml-churn-api/app/core/: config.py
ml-churn-api/app/exceptions/: __init__.py  handlers.py
ml-churn-api/app/middleware/: __init__.py  latency.py  logging.py  rate_limit.py  security.py
ml-churn-api/app/models/: __init__.py  inference_preprocessor.py  model_loader.py  pytorch_wrapper.py
ml-churn-api/app/routes/: health.py  predict.py
ml-churn-api/app/schemas/: __init__.py  health.py  predict.py
ml-churn-api/app/services/: __init__.py  model_service.py
ml-churn-api/tests/: __init__.py  test_api.py
notebooks/: eda.py  relatorio_avaliacao_telco_churn.md  relatorio_de_implementacao.md
src/models/: config.py  data_utils.py  evaluate_models.py  train_baseline.py  train_baselines.py  train_mlp.py
src/preprocessing/: __init__.py  cleaning.py  data_prep.py  pipeline.py  schemas.py  transformer.py
testes_bill/: README.md  data_prep.py  eda.py  pyproject.toml
testes_bill/notebooks/: EDA.ipynb
testes_bill/src/: data_utils.py  evaluate_models.py  train_baselines.py  train_mlp.py
tests/: conftest.py  test-schemas.py  test_data_prep.py  test_data_utils.py  test_pipeline_smoke.py  test_train_mlp.py
