[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-prediction-tech-challenge"
version = "0.1.0"
description = "Rede Neural para Previsão de Churn - Pipeline MLOps Profissional"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Bill", email = "bill@example.com" },
]

# --- DEPENDÊNCIAS DE PRODUÇÃO ---
dependencies = [
    # --- Núcleo de Dados & Processamento ---
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",

    # --- Modelagem & Deep Learning ---
    "torch>=2.0.0",
    "mlflow>=2.7.0",

    # --- Visualização & Relatórios ---
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "ydata-profiling>=4.5.0",

    # --- Engenharia, Logs e Interface ---
    "loguru>=0.7.0",
    "streamlit>=1.25.0",
    "pydantic>=2.0.0",

    # --- Squad 3: API & Monitoramento (Próximos Passos) ---
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "evidently>=0.4.0",
    "pandera>=0.17.0",
    "fairlearn>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.0.0", # <-- Adicionamos esta linha
    "ruff>=0.1.0",
    "ipykernel", # Para rodar os notebooks
]

# --- CONFIGURAÇÃO DE FERRAMENTAS ---

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py310"
# E: pycodestyle errors, F: Pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "F", "I", "UP", "B"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "slow: testes de integração end-to-end (desabilite com -m 'not slow')",
]
